--- a/nec-app-prod.properties
+++ b/nec-app-prod.properties
@@ -1,7 +1,7 @@
 #db configuration
 db_url=jdbc:mysql://localhost:3306/necproddb
 db_driver=com.mysql.jdbc.Driver
-
+db_url1=jdbc:mysql://localhost:3306/vusproddb
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/scbdb
 #spring.datasource.username=postgres
