--- a/nec-app-dev.properties
+++ b/nec-app-dev.properties
@@ -1,3 +1,4 @@
 #db configuration
 db_url=jdbc:mysql://localhost:3306/necdevdb
+db_url1=jdbc:mysql://localhost:3306/vusdevdb
 db_driver=com.mysql.jdbc.Driver
