--- a/nec-app-qa.properties
+++ b/nec-app-qa.properties
@@ -1,3 +1,4 @@
 #db configuration
 db_url=jdbc:mysql://localhost:3306/necqadb
+db_url1=jdbc:mysql://localhost:3306/vusqadb
 db_driver=com.mysql.jdbc.Driver
