--- a/nec-app-prod.properties
+++ b/nec-app-prod.properties
@@ -1,5 +1,6 @@
 #db configuration
 db_url=jdbc:mysql://localhost:3306/necproddb?useSSL=true&&serverTimezone=UTC
+db_url1=jdbc:mysql://localhost:3306/vusproddb
 db_driver=com.mysql.cj.jdbc.Driver
 
 
