--- a/nec-app-test.properties
+++ b/nec-app-test.properties
@@ -1,3 +1,4 @@
 #db configuration
 db_url=jdbc:mysql://localhost:3306/nectestdb?useSSL=true&&serverTimezone=UTC
+db_url1=jdbc:mysql://localhost:3306/vustestdb
 db_driver=com.mysql.cj.jdbc.Driver
