--- a/nec-common.properties
+++ b/nec-common.properties
@@ -54,4 +54,4 @@ spring.rabbitmq.password=guest
 spring.cloud.stream.default.contentType=application/json
 
 
-newmessage=Virtusa Cloud BUS Ready
+newmessage=Virtusa Cloud BUS Ready - v2
